stop ios form input border radius, fix btn text alignment

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -530,6 +530,7 @@ body.no-scroll {
     width: 2rem;
     height: 1rem;
     padding: 0;
+    line-height: 1;
 
     &.register {
       width: 8rem;
@@ -690,6 +691,7 @@ body.no-scroll {
 
   &_btn {
     @include button;
+    line-height: 1;
   }
 }
 
